intergrated with FB API

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "core-react-ts",
-  "title": "React TS App",
+  "name": "demo-react-core",
+  "title": "App Demo for React Core",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -66,12 +66,13 @@
     "utf8": "^3.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
+    "webpack-dev-middleware": "^6.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "webpack-dev-middleware": "^6.0.1"
+    "react-dom": "^18.2.0"
   }
 }
