--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "demo-react-core",
-  "title": "App Demo for React Core",
+  "title": "Ứng dụng quản lý FB",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --mode=production",
+    "deploy": "webpack --config webpack.config.js --mode=production && firebase deploy",
     "start": "sudo webpack serve --mode=development"
   },
   "author": "",
@@ -50,6 +51,7 @@
     "raw-loader": "^4.0.2",
     "react-refresh": "^0.14.0",
     "react-svg-loader": "^3.0.3",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "sharp": "^0.31.2",
@@ -73,6 +75,7 @@
     "axios": "^1.2.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1"
   }
 }
