--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1"
